# pikelet

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  appendix00-00-appendix.html  appendix00-01-semantics.html  appendix00-02-references.html  ch00-00-introduction.html  ch01-00-language.html  ch01-01-terms.html  ch01-02-declarations.html  ch01-03-modules.html  highlight.js  index.html  package.json  prelude.lp  print.html  rustfmt.toml  searchindex.js  searchindex.json
.github/workflows/: ci.yml
appendix/: design.html  implementation.html  index.html  influences.html  references.html  semantics.html  theory.html
book/: .gitignore  README.md  book.toml  index.js  package.json
book/src/: SUMMARY.md  appendix00-01-semantics.md  appendix00-02-references.md  ch00-00-introduction.md  ch01-00-language.md  ch01-01-terms.md  ch01-02-declarations.md  development.md  guide.md  index.md  introduction.md  reference.md  specification.md
ci/: build-book  build-highlight-js  install-cargo-updates  install-mdbook
crates/: README.md
crates/pikelet/: Cargo.toml  README.md
crates/pikelet-concrete/: Cargo.toml  README.md  build.rs
crates/pikelet-core/: Cargo.toml  README.md
crates/pikelet-driver/: Cargo.toml  README.md
crates/pikelet-driver/src/: lib.rs
crates/pikelet-driver/tests/: prelude.rs
crates/pikelet-elaborate/: Cargo.toml  README.md
crates/pikelet-elaborate/src/: context.rs  env.rs  errors.rs  lib.rs  normalize.rs
crates/pikelet-elaborate/tests/: check.rs  infer.rs  normalize.rs
crates/pikelet-elaborate/tests/support/: mod.rs
crates/pikelet-language-server/: Cargo.toml  README.md
crates/pikelet-language-server/src/: lib.rs  rpc.rs
crates/pikelet-library/: Cargo.toml  README.md
crates/pikelet-library/src/: lib.rs  prelude.pi
crates/pikelet-repl/: Cargo.toml  README.md
crates/pikelet-repl/src/: lib.rs
crates/pikelet-syntax/: Cargo.toml  README.md  build.rs
crates/pikelet-syntax/src/: concrete.rs  core.rs  domain.rs  lib.rs  raw.rs
crates/pikelet-syntax/src/parse/: errors.rs  grammar.lalrpop  lexer.rs  mod.rs
crates/pikelet-syntax/src/pretty/: concrete.rs  core.rs  mod.rs
crates/pikelet-syntax/src/translation/: desugar.rs  resugar.rs
crates/pikelet-syntax/tests/: desugar.rs  parse.rs  resugar.rs
crates/pikelet/src/: lib.rs  main.rs
docs/: README.md  contributing.md  guide.md  index.md  reference.md  spec.md  specification.md
docs/guide/: installation.md
docs/guide.rs/: data-structures.md  hello-world.md  modular-programming.md  motivation.md
docs/reference/: bibliography.md  builtins.md  comments.md  functions.md  literals.md  names.md  records.md  universes.md
docs/spec/: references.md  theory.md
editors/: README.md
editors/code/: .editorconfig  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  pikelet.code-workspace  vsc-extension-quickstart.md
examples/: README.md  comments.pi  cube.pi  functions.pi  hello-world.pi  let.pi  meta.pi  prelude.pi  record-mesh.pi  record-term-deps.pi  record-type-deps.pi  universes.pi  window-settings.pi
installation/: index.html
language/: bindings.html  conditionals.html  declarations.html  functions.html  index.html  modules.html  records.html  repl.html  terms.html  type-inference.html  types-of-types.html  universes.html
nameless/: Cargo.toml
nameless-derive/: Cargo.toml
nameless-derive/src/: lib.rs
nameless/examples/: lambda.rs  lambda_multi.rs
nameless/src/: debruijn.rs  gen_id.rs  lib.rs  named.rs  scope.rs  var.rs
pikelet/: Cargo.toml  README.md  build.rs
pikelet-cli/: Cargo.toml  README.md
pikelet-cli/src/: check.rs  lib.rs  main.rs  repl.rs  reporting.rs
pikelet-cli/tests/: source_tests.rs
pikelet-editor/: Cargo.toml  README.md
pikelet-editor/src/: lib.rs
pikelet-gui/: Cargo.toml  README.md
pikelet-gui/src/: lib.rs  main.rs
pikelet-ide/: Cargo.toml  README.md
pikelet-language-server/: Cargo.toml  README.md
pikelet-language-server/src/: lib.rs
pikelet-test/: Cargo.toml
pikelet-test/src/: lib.rs
pikelet/src/: core.rs  lang.rs  lib.rs  literal.rs  pass.rs  reporting.rs  surface.rs
pikelet/src/core/: mod.rs  semantics.rs  typing.rs
pikelet/src/core/projections/: pretty.rs  surface.rs
pikelet/src/lang/: anf.rs  cc.rs  core.rs  surface.rs
pikelet/src/lang/core/: marshall.rs  semantics.rs  typing.rs
pikelet/src/lang/core/typing/: reporting.rs
pikelet/src/lang/surface/: grammar.lalrpop  lexer.rs
pikelet/src/pass/: core_to_pretty.rs  core_to_surface.rs  surface_to_core.rs  surface_to_pretty.rs
pikelet/src/pass/surface_to_core/: reporting.rs
pikelet/src/surface/: grammar.lalrpop  lex.rs  lexer.rs  mod.rs  projections.rs
pikelet/src/surface/projections/: core.rs  pretty.rs
pikelet/src/surface/projections/core/: reporting.rs
pikelet/tests/: examples.rs
samples/: cube.pi
source/: Cargo.toml  README.md
source-reporting/: Cargo.toml  README.md
source-reporting/src/: diagnostic.rs  emitter.rs  lib.rs
source/src/: file.rs  lib.rs  pos.rs  reporting.rs
source/src/reporting/: diagnostic.rs  mod.rs
src/: check.rs  core.rs  lib.rs  main.rs  pretty.rs  var.rs
src/check/: mod.rs  tests.rs
src/cli/: check.rs  mod.rs  repl.rs
src/core/: mod.rs  semantics.rs  tests.rs  typing.rs
src/parse/: grammar.lalrpop  mod.rs
src/semantics/: conversion.rs  env.rs  errors.rs  mod.rs  normalize.rs  prim.rs  tests.rs
src/surface/: grammar.lalrpop  mod.rs
src/syntax/: concrete.rs  context.rs  core.rs  macros.rs  mod.rs  pretty.rs  prim.rs  raw.rs  var.rs
tests/: check.rs  comments.pi  desugar.rs  functions.pi  infer.rs  literals.pi  normalize.rs  parse.rs  pikelet.rs  record-term-deps.pi  record-type-deps.pi  resugar.rs  samples.rs
tests/support/: mod.rs
theme/: highlight.js
tools/: build-highlight-js  install-code
website/: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js  sidebars.json  siteConfig.js
website/blog/: 2017-12-01-monthly-update.md  2018-01-01-monthly-update.md  (+9 more)
(+165 files in other folders)
