[package]
name = "pikelet-cli"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
edition = "2018"
publish = false
description = "Command line interface for interacting with the Pikelet programming language"
homepage = "https://github.com/pikelet-lang/pikelet"
repository = "https://github.com/pikelet-lang/pikelet"
readme = "README.md"
keywords = ["pikelet", "cli"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gui"]
gui = ["pikelet-gui"]

[dependencies]
codespan-reporting = "0.9.4"
pikelet = { path = "../pikelet" }
pikelet-gui = { path = "../pikelet-gui", optional = true }
pretty = "0.10"
rustyline = "6.0"
structopt = "0.3"
term_size = "0.3.1"
xdg = "2.2"
