[package]
name = "pikelet-editor"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
edition = "2018"
publish = false
description = "Graphical user interface for interacting with the Pikelet programming language"
homepage = "https://github.com/pikelet-lang/pikelet"
repository = "https://github.com/pikelet-lang/pikelet"
readme = "README.md"
keywords = ["pikelet", "gui"]
categories = []
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.1"
pikelet = { path = "../pikelet" }
