[package]
name = "pikelet-language-server"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
edition = "2018"
publish = false
description = "Language server protocol implementation for the Pikelet programming language"
homepage = "https://github.com/pikelet-lang/pikelet"
repository = "https://github.com/pikelet-lang/pikelet"
readme = "README.md"
keywords = ["pikelet"]
categories = []
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexi_logger = "0.15"
log = "0.4"
lsp-server = "0.3"
lsp-types = "0.79"
serde_json = "1.0.57"
serde = { version = "1.0.114", features = ["derive"] }
