[package]
name = "pikelet-test"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
edition = "2018"
publish = false
description = "Integration tests for the Pikelet programming language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
libtest-mimic = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
walkdir = "2.3.2"
