[package]
name = "pikelet"
version = "0.1.0"
authors = ["Brendan Zabarauskas"]
edition = "2018"
publish = false
description = "The Pikelet programming language"
homepage = "https://github.com/pikelet-lang/pikelet"
repository = "https://github.com/pikelet-lang/pikelet"
readme = "../README.md"
keywords = ["pikelet", "language"]
categories = []
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.9.0"
im = "14.2"
itertools = "0.8"
lalrpop-util = "0.17"
pretty = "0.9"
regex = "1.3"
logos = "0.11"

[build-dependencies]
lalrpop = "0.17"
