[package]
name = "source-reporting"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Diagnostic reporting support for the source crate"
publish = false

[dependencies]
source = { path = "../source", version = "0.1.0" }
termcolor = "0.3.4"
