[package]
name = "source"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Data structures for tracking source locations"
publish = false

[dependencies]
failure = "0.1.1"

[dev-dependencies]
pretty_assertions = "0.5.0"
