[package]
name = "pikelet-library"
version = "0.1.0"
license = "Apache-2.0"
readme = "README.md"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Builtin libraries for Pikelet"
homepage = "https://github.com/pikelet-lang/pikelet"
repository = "https://github.com/pikelet-lang/pikelet"
publish = false

[dependencies]
