[package]
name = "pikelet-repl"
version = "0.1.0"
license = "Apache-2.0"
readme = "README.md"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
homepage = "https://github.com/pikelet-lang/pikelet"
repository = "https://github.com/pikelet-lang/pikelet"
publish = false

[dependencies]
codespan = "0.2.0"
combine = "3.6.3"
failure = "0.1.2"
linefeed = "0.5.3"
pikelet-concrete = { version = "0.1.0", path = "../pikelet-concrete" }
pikelet-core = { version = "0.1.0", path = "../pikelet-core" }
pikelet-driver = { version = "0.1.0", path = "../pikelet-driver" }
structopt = "0.2.12"
term_size = "0.3.1"
