[package]
name = "pikelet-syntax"
version = "0.1.0"
license = "Apache-2.0"
readme = "../../README.md"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
homepage = "https://github.com/pikelet-lang/pikelet"
repository = "https://github.com/pikelet-lang/pikelet"
publish = false

[dependencies]
codespan = "0.2.0"
codespan-reporting = "0.2.0"
failure = "0.1.2"
im = "12.2.0"
lalrpop-util = "0.16.0"
moniker = { version = "0.5.0", features = ["codespan", "im"] }
pretty = { version = "0.5.2", features = ["termcolor"] }
unicode-xid = "0.1.0"

[build-dependencies]
lalrpop = "0.16.0"

[dev-dependencies]
goldenfile = "0.7.1"
pretty_assertions = "0.5.1"
